fixed content not showing

--- a/less/footer.less
+++ b/less/footer.less
@@ -3,7 +3,7 @@
 }
 #footer-sidebar {
     display: block;
-    height: 1920px;
+    height: 250px;
 }
     
 #footer-sidebar1 {
@@ -20,6 +20,6 @@
 }
     
 #footer-sidebar3 {
-    float: right;
+    float: left;
     width: 340px;
 }
